--- a/1-JavaScript-Classwork/z-DOM/4-Modules/Webpack/webpack-prototype/package.json
+++ b/1-JavaScript-Classwork/z-DOM/4-Modules/Webpack/webpack-prototype/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
