--- a/data-server/contacts-manager/package.json
+++ b/data-server/contacts-manager/package.json
@@ -14,7 +14,8 @@
     "jade": "~1.11.0",
     "lowdb": "^1.0.0",
     "mongoose": "^5.7.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "faker": "^4.1.0",
