--- a/data-server/contacts-manager/package.json
+++ b/data-server/contacts-manager/package.json
@@ -10,8 +10,10 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-jwt": "^5.3.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
     "mongoose": "^5.7.1",
     "morgan": "~1.9.1",
